--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
   background: white;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  max-height: 80vh;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 .inputContainer{
   display: flex;
@@ -82,4 +85,14 @@ input[type="text"]:focus {
 ::placeholder {
   color: grey;
   opacity: 1;
+}
+
+::-webkit-scrollbar {
+  width: 0.4em;
+}
+::-webkit-scrollbar-track-piece {
+  background: #ffffff
+}
+::-webkit-scrollbar-thumb {
+  background: #888
 }
